[package]
name = "rustyengine"
version = "0.1.0"
authors = ["Ian Smith <isilversmith810@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.2"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
